[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
pci = { git = "https://github.com/elliott10/pci-rs.git", rev = "6441576c" }
nvme_driver = {path = "../"}
lazy_static = { version = "1.4", features = ["spin_no_std"] }
buddy_system_allocator = "0.6"
riscv = "0.9"

[profile.release]
debug = true
